Layout overflow fixed: Deployment V1.1

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -567,6 +567,7 @@
 /* ===== ABOUT ===== */
 #about {
   background: $container-color;
+  overflow: hidden;
 
   .about {
     display: grid;
